# semantic_victim_localization

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  victim_localization  victim_localization.rosinstall
Data/: PATH.txt
config/: costmap_params.yaml  exploration.yaml  gaussian_distribution.yaml  nbv_params.yaml  octomap_manager_params.yaml  reactive_planner_params.yaml  thermal_node.yaml  victim_Map_DL.yaml  victim_Map_test.yaml  victim_Map_thermal.yaml
config/grid_published_map/: victim_Map_DL.yaml  victim_Map_Navigation.yaml  victim_Map_combined.yaml  victim_Map_occlusion.yaml  victim_Map_thermal.yaml  victim_Map_wireless.yaml  victim_Map_wireless_offline.yaml
include/: vehicle_sensor_position_plugin.h
include/RSSmodel2/: RSSmodel2.cpp  RSSmodel2.h  RSSmodel2_data.cpp  RSSmodel2_data.h  RSSmodel2_emxAPI.cpp  RSSmodel2_emxAPI.h  RSSmodel2_emxutil.cpp  RSSmodel2_emxutil.h  RSSmodel2_initialize.cpp  RSSmodel2_initialize.h  RSSmodel2_rtw.bat  RSSmodel2_rtw.mk  RSSmodel2_terminate.cpp  RSSmodel2_terminate.h  RSSmodel2_types.h  abs1.cpp  abs1.h  buildInfo.mat  codeInfo.mat  eml_rand_mt19937ar_stateful.cpp  eml_rand_mt19937ar_stateful.h  randn.cpp  randn.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
include/control/: drone_communicator.h  iris_drone_commander.h  vehicle_commander.h  vehicle_communicator.h  vehicle_control_base.h  vehicle_control_floating_sensor.h  vehicle_control_iris.h  vehicle_control_iris_origin.h
include/ssd_keras/: ssd_detection_with_ecludian_clustering (backup).h  ssd_detection_with_ecludian_clustering.h  victim_vision_detector.h
include/utilities/: pose_conversion.h
include/vehicle/: floating_sensor_position_plugin.h
include/victim_localization/: ReactivePathPlanner.h  Volumetric_Map_Manager.h  common.h  navigation_base.h  nbv_history.h  raytracing.h  raytracing_2d.h  reactive_path_planner.h  reactive_path_planner.h.autosave  reactive_planner_server.h  ssd_client.h  straightline.h  termination_check_base.h  termination_check_max_iterations.h  termination_check_max_probability.h  test_NBV.h  test_NBV_origin.h  test_NBZ (backup).h  test_flight (copy).h  test_navigation.h  victim_detector_base.h  victim_map_base.h  victim_map_combined.h  victim_map_dl.h  victim_map_thermal.h  victim_map_wireless.h  victim_map_wireless_2.h  victim_thermal_detector.h  victim_thermal_detector_node.h  victim_wireless_detector.h  view_evaluator_base.h  view_evaluator_fieldofview.h  view_evaluator_ig.h  view_evaluator_ig_exp.h  view_evaluator_ig_exp_max.h  view_evaluator_log_reward.h  view_evaluator_max_max.h  view_evaluator_max_min.h  view_evaluator_max_sum.h  view_evaluator_min_neigh.h  (+11 more)
launch/: NBV_test.launch  Volumetric_Map.launch  drone_commander_test.launch  firmware_test.launch  gaussian_distribution.launch  navigation_test.launch  nbv_test.launch  posix_sitl.launch  spawn_vehicle_floating_sensor.launch  spawn_vehicle_uav.launch  spawn_vehicle_uav_with_Firmware.launch  test.launch  test_navigation.launch  test_new_drone.launch  vehicle_setup.launch  visualize_results.launch  wireless.launch
msg/: DL_msgs_box.msg  DL_msgs_boxes.msg  IterationInfo.msg
resources/ssd_keras/: ssd_layers.py
rviz/: grid_map_gaussian.rviz  test_NBZ.rviz  test_NBZ1.rviz  test_navigation.rviz  visualize_results.rviz
script/: batch (copy).py  batch.py  plot_attributes.py  plot_batch_result_attributes.py  plot_batch_results.py  plot_ieration_info.py  plot_ieration_info_combined.py  plot_utilities.py  signal  sys  victim_detection_using_ssd_keras.py  victim_detection_using_ssd_keras_backup (copy).py  victim_detection_using_ssd_keras_zed.py
src/: ReactivePathPlanner.cpp  SSD_client.cpp  Volumetric_Map_Manager.cpp  ecludian_clustering_Diff.cpp  navigation_base.cpp  nbv_history.cpp  raytracing.cpp  raytracing_2d.cpp  raytracing_backup;.cpp  reactive_path_planner.cpp  reactive_planner_server.cpp  signal_map.cpp  ssd_detection_with_ecludian_clustering.cpp  straightline.cpp  takeoff.cpp  termination_check_base.cpp  termination_check_max_iterations.cpp  termination_check_max_probability.cpp  test_NBV.cpp  test_NBZ_backup.cpp  test_flight (copy).cpp  test_navigation.cpp  test_navigation.cpp.autosave  test_navigation_backup.cpp  test_node.cpp  victim_detector_base.cpp  victim_map_base.cpp  victim_map_base.cpp.autosave  victim_map_combined.cpp  victim_map_dl.cpp  victim_map_thermal.cpp  victim_map_wireless.cpp  victim_map_wireless_2.cpp  victim_thermal_detector.cpp  victim_thermal_detector_node.cpp  victim_vision_detector.cpp  victim_wireless_detector.cpp  view_evaluator_base.cpp  view_evaluator_fieldofview.cpp  view_evaluator_ig.cpp  (+22 more)
src/control/: drone_communicator.cpp  iris_drone_commander.cpp  vehicle_commander.cpp  vehicle_communicator.cpp  vehicle_control_base.cpp  vehicle_control_floating_sensor.cpp  vehicle_control_iris.cpp  vehicle_control_iris_origin.cpp  vehicle_control_iris_origin.h
src/vehicle/: floating_sensor_position_plugin.cpp
srv/: DL_box.srv  path2_action.srv  path_action.srv  pointcloud_capture.srv  status_action.srv  waypoint_action.srv
urdf/floating_sensor/: floating_sensor.gazebo  floating_sensor.sdf
urdf/iris/: convert_xacro_to_sdf.sh  convert_xacro_to_sdf.sh~  convert_xacro_to_sdfT.sh~  depth_camera.xacro  iris_nbv_exploration.gazebo  iris_with_sensors (copy).xacro  iris_with_sensors.sdf  stand.sdf  (+14 more)
world/: FinalWorld.world  FinalWorld_.world  NewWorld.world  NewWorldL.world  NewWorldSimple.world  NewWorldSmall.world  Sample_Fin.world  SimpleWorlWithObjects1.world  SimulatedWorld (copy)  TwoRoomWithHeatVictim.world  TwoRoomWithHeatVictimTESTDL.world  prob_test.world  prob_test2.world  reciever.sdf  sar_twoRooms.world  sar_twoRooms1.world  twoRoomsResizedObjects.world  twoRoomsSmall.world  twoRoomsSmall_with_color.world  twoRoomsSmallthreeDL.world  twoRoomsSmallthreeT.world  twoRoomsSmalltwo.world  twoRoomsSmalltwoDL.world  twoRoomsSmalltwothermal.world  two_room_small_with_thermal_victim.world  wireless_world.world  world_test.world  world_test_thermal.world
(+85 files in other folders)
