<?xml version="1.0"?>
<package>
  <name>victim_localization</name>
  <version>1.0.0</version>
  <description>The Victim_Localization package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="abdulcollage1324@gmail.com">abdulrahman</maintainer>

  <license>LGPLv3</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>eigen</build_depend>
  <run_depend>eigen</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <!--<build_depend>rostest</build_depend>-->

  <build_depend>mav_msgs</build_depend>
  <run_depend>mav_msgs</run_depend>

  <build_depend>octomap</build_depend>
  <run_depend>octomap</run_depend>

<build_depend>grid_map_ros</build_depend>
<run_depend>grid_map_ros</run_depend>


<build_depend>pcl_ros</build_depend>
<run_depend>pcl_ros</run_depend>

<build_depend>pcl_conversions</build_depend>
<run_depend>pcl_conversions</run_depend>

<build_depend>octomap_world</build_depend>
<run_depend>octomap_world</run_depend>

<build_depend>eigen_catkin</build_depend>
<run_depend>eigen_catkin</run_depend>

<build_depend>visualization_msgs</build_depend>
<run_depend>visualization_msgs</run_depend>

<build_depend>costmap_2d</build_depend>
 <run_depend>costmap_2d</run_depend>

<build_depend>grid_map_demos</build_depend>
<build_depend>grid_map_cv</build_depend>
<build_depend>grid_map_loader</build_depend>
<build_depend>grid_map_msgs</build_depend>
<build_depend>grid_map_octomap</build_depend>
<build_depend>grid_map_rviz_plugin</build_depend>
<build_depend>grid_map_visualization</build_depend>
<build_depend>grid_map_core</build_depend>


<run_depend>grid_map_demos</run_depend>
<run_depend>grid_map_cv</run_depend>
<run_depend>grid_map_loader</run_depend>
<run_depend>grid_map_msgs</run_depend>
<run_depend>grid_map_octomap</run_depend>
<run_depend>grid_map_rviz_plugin</run_depend>
<run_depend>grid_map_core</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
   <export>
  </export>
</package>
